objects/Boarding_Form__c.object
<CustomObject>
    <description>Used for C&amp;I to create a Boarding Form for their Boarding Documentation Process. A Boarding Form record will be created from the LOQ object.</description>
    <fields>
        <fullName>Appraisal_Review_Date_Source_Page__c</fullName>
        <label>Appraisal Review Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraisal_Review_Date__c</fullName>
        <inlineHelpText>If applicable, effective date of the Appraisal. Source doc: Appraisal.</inlineHelpText>
        <label>Appraisal Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraised_Value_Source_Page__c</fullName>
        <label>Appraised Value Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <inlineHelpText>If applicable, appraised value per the Final CAM. Source doc: Appraisal or Appraisal Review</inlineHelpText>
        <label>Appraised Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>Set in final approval with the name of the Approver</description>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BF_Status_Source_Page__c</fullName>
        <label>BF Status Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BF_Status__c</fullName>
        <label>BF Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BF In Progress</fullName>
                    <default>true</default>
                    <label>BF In Progress</label>
                </value>
                <value>
                    <fullName>BF Submitted for Pre-Approval</fullName>
                </value>
                <value>
                    <fullName>BF Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>BF Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>BF Approved</fullName>
                </value>
                <value>
                    <fullName>BF Rejected</fullName>
                </value>
                <value>
                    <fullName>BF Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BWR_2_Class_Code_Source_Page__c</fullName>
        <label>BWR 2 Class Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Class_Code__c</fullName>
        <label>BWR 2 Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Personal</fullName>
                </value>
                <value>
                    <fullName>B - Business Profit</fullName>
                </value>
                <value>
                    <fullName>C - Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D - Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BWR_2_Email_Address_Source_Page__c</fullName>
        <label>BWR 2 Email Address Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Email_Address__c</fullName>
        <label>BWR 2 Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BWR_2_Legal_Name_Source_Page__c</fullName>
        <label>BWR 2 Legal Name Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Legal_Name__c</fullName>
        <label>BWR 2 Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_City_Source_Page__c</fullName>
        <label>BWR 2 Mailing Address City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_City__c</fullName>
        <label>BWR 2 Mailing Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_Country__c</fullName>
        <label>BWR 2 Mailing Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_Postal_Code__c</fullName>
        <label>BWR 2 Mailing Address Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_State__c</fullName>
        <label>BWR 2 Mailing Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Address_Street__c</fullName>
        <label>BWR 2 Mailing Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Country_Source_Page__c</fullName>
        <label>BWR 2 Mailing Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Postal_Code_Source_Page__c</fullName>
        <label>BWR 2 Mailing Postal Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_State_Source_Page__c</fullName>
        <label>BWR 2 Mailing State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Mailing_Street_Source_Page__c</fullName>
        <label>BWR 2 Mailing Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Phone_Number_Source_Page__c</fullName>
        <label>BWR 2 Phone Number (#) Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Phone_Number__c</fullName>
        <label>BWR 2 Phone Number (#)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BWR_2_Tax_ID_Number_Source_Page__c</fullName>
        <label>BWR 2 Tax ID Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Tax_ID_Number_Type_Source_Page__c</fullName>
        <label>BWR 2 Tax ID Number Type Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_2_Tax_ID_Number_Type__c</fullName>
        <label>BWR 2 Tax ID Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I - Individual</fullName>
                </value>
                <value>
                    <fullName>T - TIN</fullName>
                </value>
                <value>
                    <fullName>B - Business</fullName>
                    <isActive>false</isActive>
                    <label>B - Business</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <isActive>false</isActive>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                    <isActive>false</isActive>
                    <label>Individual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BWR_2_Tax_ID_Number__c</fullName>
        <label>BWR 2 Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Class_Code_Source_Page__c</fullName>
        <label>BWR Class Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Email_Address_Source_Page__c</fullName>
        <label>BWR Email Address Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Legal_Name_Source_Page__c</fullName>
        <label>BWR Legal Name Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Legal_Name__c</fullName>
        <description>Default set by Next Stage button from Opportunity.CI_Borrower_Legal_Name__r.Name</description>
        <inlineHelpText>This is the name of the debtor entering into a contractual agreement with BofI. Source doc (1 of the following): Loan Agreement, SS-4, IRS TIN Verification. The IRS TIN Verification can be requested from C&amp;I Operations.</inlineHelpText>
        <label>*BWR Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Mailing_Address_City_Source_Page__c</fullName>
        <label>BWR Mailing Address City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Mailing_Address_State_Source_Page__c</fullName>
        <label>BWR Mailing Address State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Mailing_Address_Street_Source_Page__c</fullName>
        <label>BWR Mailing Address Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Mailing_Country_Source_Page__c</fullName>
        <label>BWR Mailing Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Mailing_Postal_Code_Source_Page__c</fullName>
        <label>BWR Mailing Postal Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Phone_Number_Source_Page__c</fullName>
        <label>BWR Phone Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Tax_ID_Number_Source_Page__c</fullName>
        <label>BWR Tax ID Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWR_Tax_ID_Number_Type_Source_Page__c</fullName>
        <label>BWR Tax ID Number Type Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BorrowerReadyForSubmmit_SFDC2_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Chech if the Related borrower record is populated the required fields to send BF for Approval</description>
        <label>Borrower Info Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Borrower #1</description>
        <label>Borrower 1</label>
        <referenceTo>Borrower__c</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Borrower #2</description>
        <label>Borrower 2</label>
        <referenceTo>Borrower__c</referenceTo>
        <relationshipLabel>Boarding Forms (Borrower 2)</relationshipLabel>
        <relationshipName>Boarding_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Borrower #3</description>
        <label>Borrower 3</label>
        <referenceTo>Borrower__c</referenceTo>
        <relationshipLabel>Boarding Forms (Borrower 3)</relationshipLabel>
        <relationshipName>Boarding_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_Class_Code__c</fullName>
        <inlineHelpText>Option C requires additional verification from https://apps.irs.gov/app/eos/. Provide screenshot from website of findings. A, B, or D: No additional source doc required.</inlineHelpText>
        <label>*BWR Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_Email_Address__c</fullName>
        <inlineHelpText>The email address of the main point of contact for notices. Source doc (1 of the following): Loan Agreement, Note, other legal agreement, email confirmation from Borrower.</inlineHelpText>
        <label>BWR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Borrower_Mailing_Address_City__c</fullName>
        <description>Default set by trigger from Opp. field
CI_CityCopy__c</description>
        <label>*BWR Mailing Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Mailing_Address_Country__c</fullName>
        <description>No field exists to copy from</description>
        <label>*BWR Mailing Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Mailing_Address_Postal_Code__c</fullName>
        <description>Default set by trigger from Opp. field
CI_ZipCopy__c</description>
        <label>*BWR Mailing Address Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Mailing_Address_State__c</fullName>
        <description>Default set by trigger from Opp. field
CI_StateCopy__c</description>
        <label>*BWR Mailing Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Mailing_Address_Street__c</fullName>
        <description>Default set by trigger from Opp. field
CI_StreetCopy__c</description>
        <inlineHelpText>This is the address that notices will be sent to. Source doc (1 of the following): Loan Agreement, Note, SS-4</inlineHelpText>
        <label>*BWR Mailing Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Phone_Number__c</fullName>
        <description>Default set from Opp</description>
        <inlineHelpText>The phone number of the main point of contact for notices. Source doc (1 of the following): Loan Agreement, Note, other legal agreement, email confirmation from Borrower.</inlineHelpText>
        <label>*BWR Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrower_Tax_ID_Number_Type__c</fullName>
        <inlineHelpText>Source doc: SS-4, IRS TIN Verification. The IRS TIN Verification can be requested from C&amp;I Operations.</inlineHelpText>
        <label>*BWR Tax ID Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Individual</fullName>
                </value>
                <value>
                    <fullName>T - TIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_Tax_ID_Number__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Tax_ID__c</description>
        <inlineHelpText>The EIN assigned by the IRS to the Borrower&apos;s legal name. Source doc (1 of the following): SS-4, IRS TIN Verification. The IRS TIN Verification can be requested from C&amp;I Operations.  If a foreign national, refer to BSA.</inlineHelpText>
        <label>*BWR Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Bank of Internet</fullName>
                    <default>true</default>
                    <label>01-Bank of Internet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRE_Sub_Property_Type_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRE_Sub_Property_Type__c</fullName>
        <inlineHelpText>Subject property sub-property type codes. If applicable, only applies to multifamily and commercial properties. Source doc: CRE Sub-Property Type Codes.</inlineHelpText>
        <label>CRE Sub-Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_I_Loan_Type_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_I_Loan_Type__c</fullName>
        <description>Default set by trigger from Loan Ops Questionaire field
C_I_Loan_Type__c</description>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</inlineHelpText>
        <label>C&amp;I Loan Type *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1E</fullName>
                </value>
                <value>
                    <fullName>1F</fullName>
                </value>
                <value>
                    <fullName>5A</fullName>
                </value>
                <value>
                    <fullName>5B</fullName>
                </value>
                <value>
                    <fullName>5C</fullName>
                </value>
                <value>
                    <fullName>5D</fullName>
                </value>
                <value>
                    <fullName>5E</fullName>
                </value>
                <value>
                    <fullName>5F</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>5L</fullName>
                </value>
                <value>
                    <fullName>5M</fullName>
                </value>
                <value>
                    <fullName>5N</fullName>
                </value>
                <value>
                    <fullName>5P</fullName>
                </value>
                <value>
                    <fullName>5R</fullName>
                </value>
                <value>
                    <fullName>5S</fullName>
                </value>
                <value>
                    <fullName>5T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Report_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Report_Code__c</fullName>
        <description>Default set by trigger from Loan Ops Questionaire field
Call_Report_Code__c</description>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</inlineHelpText>
        <label>Call Report Code *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1C2A</fullName>
                </value>
                <value>
                    <fullName>1A1</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1A2</fullName>
                </value>
                <value>
                    <fullName>1E2</fullName>
                </value>
                <value>
                    <fullName>6D</fullName>
                </value>
                <value>
                    <fullName>4A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coll_Code_Description_Source_Page__c</fullName>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</inlineHelpText>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Insurance_Exp_Date_Source_Page__c</fullName>
        <label>Coll. Insurance Exp. Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Code_Description__c</fullName>
        <description>Default set by trigger from Loan Ops Questionaire field
Collateral_Code_Description__c</description>
        <label>Collateral Code/Description *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>110 - SFR Construction</fullName>
                </value>
                <value>
                    <fullName>120 - MF Construction</fullName>
                </value>
                <value>
                    <fullName>130 - CRE Construction</fullName>
                </value>
                <value>
                    <fullName>160 - Real Estate - Raw Lots and Land</fullName>
                </value>
                <value>
                    <fullName>400 - Business-Unsecured</fullName>
                </value>
                <value>
                    <fullName>441 - Business Secured by Non-Real Estate Collateral</fullName>
                </value>
                <value>
                    <fullName>501 - SFR Notes</fullName>
                </value>
                <value>
                    <fullName>502 - SFR NPL</fullName>
                </value>
                <value>
                    <fullName>503 - SFR Tax Liens</fullName>
                </value>
                <value>
                    <fullName>504 - MF Notes</fullName>
                </value>
                <value>
                    <fullName>505 - MF NPL</fullName>
                </value>
                <value>
                    <fullName>506 - MF Tax Liens</fullName>
                </value>
                <value>
                    <fullName>507 - CRE Notes</fullName>
                </value>
                <value>
                    <fullName>508 - CRE NPL</fullName>
                </value>
                <value>
                    <fullName>509 - CRE Tax Liens</fullName>
                </value>
                <value>
                    <fullName>510 - Health Care</fullName>
                </value>
                <value>
                    <fullName>511 - SFR Direct</fullName>
                </value>
                <value>
                    <fullName>512 - MF Direct</fullName>
                </value>
                <value>
                    <fullName>513 - CRE Direct</fullName>
                </value>
                <value>
                    <fullName>620 - Consumer Note, Unsecured</fullName>
                </value>
                <value>
                    <fullName>621 - Consumer, New Cars</fullName>
                </value>
                <value>
                    <fullName>622 - Consumer, Used Cars</fullName>
                </value>
                <value>
                    <fullName>640 - Consumer, Secured by Other Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Insurance_Exp_Date__c</fullName>
        <inlineHelpText>Source doc: Insurance Declaration Page</inlineHelpText>
        <label>Collateral Insurance Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committed_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_1_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_1__c</fullName>
        <inlineHelpText>Interest reserve account number. Source doc: JHA screenshot of accounts.</inlineHelpText>
        <label>DDA Account Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_2_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_2__c</fullName>
        <inlineHelpText>Collection account number. Source doc: JHA screenshot of accounts.</inlineHelpText>
        <label>DDA Account Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_3_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Account_Number_3__c</fullName>
        <inlineHelpText>Operating account number. Source doc: JHA screenshot of accounts.</inlineHelpText>
        <label>DDA Account Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Final_Boarding__c</fullName>
        <inlineHelpText>Date loan was entered and activated in core system and any other applicable monitoring/servicing systems.</inlineHelpText>
        <label>Date Entered (Final Boarding)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Before_Printing_Source_Page__c</fullName>
        <label>Days Before Printing Bills Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_1__c</fullName>
        <description>Deal Team member from Opportunity</description>
        <label>Deal Team Member 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_2__c</fullName>
        <description>Deal Team member from Opportunity</description>
        <label>Deal Team Member 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_3__c</fullName>
        <description>Deal Team member from Opportunity</description>
        <label>Deal Team Member 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Source_Page__c</fullName>
        <label>Expiration Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_lockout_date__c</fullName>
        <inlineHelpText>If applicable, this is the date the borrower will no longer be allowed to draw on funds. Source doc: Loan Agreement, other legal agreement.</inlineHelpText>
        <label>Expiration Date (lockout date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date_Source_Page__c</fullName>
        <label>First Payment Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <inlineHelpText>If not specified in the loan agreement, use the following date calculations: CADENCE serviced loans, select the 1st of the month after the origination date. If the loan will be serviced within Silverlake select the 15th of the month following the originat</inlineHelpText>
        <label>First Payment Date *</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FlagNotification_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag ussing in SubmmitalSuccessfulNotification lightning component</description>
        <label>FlagNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Required_Source_Page__c</fullName>
        <label>Flood Insurance Required? Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Required__c</fullName>
        <inlineHelpText>Source doc: Flood Zone Certificate. If Flood Cert says Yes, must provide flood insurance with source docs.</inlineHelpText>
        <label>Flood Insurance Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date *</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTR_1_Birthdate_Source_Page__c</fullName>
        <label>GTR 1 Birthdate Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Class_Code_Source_Page__c</fullName>
        <label>GTR 1 Class Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Contingent_Source_Page__c</fullName>
        <label>GTR 1 Contingent? Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Email_Source_Page__c</fullName>
        <label>GTR 1 Email Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Gender_Source_Page__c</fullName>
        <label>GTR 1 Gender Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Mailing_City_Source_Page__c</fullName>
        <label>GTR 1 Mailing City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Mailing_Country_Source_Page__c</fullName>
        <label>GTR 1 Mailing Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Mailing_State_Source_Page__c</fullName>
        <label>GTR 1 Mailing State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Mailing_Street_Source_Page__c</fullName>
        <label>GTR 1 Mailing Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Name_Source_Page__c</fullName>
        <label>GTR 1 Name Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Phone_Number_Source_Page__c</fullName>
        <label>GTR 1 Phone Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Postal_Code_Zip_Source_Page__c</fullName>
        <label>GTR 1 Postal Code/Zip Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Tax_ID_Number_Source_Page__c</fullName>
        <label>GTR 1 Tax ID Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_1_Tax_ID_Number_Type_Source_Page__c</fullName>
        <label>GTR 1 Tax ID Number Type Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Birthdate_Source_Page__c</fullName>
        <label>GTR 2 Birthdate Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Class_Code_Source_Page__c</fullName>
        <label>GTR 2 Class Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Contingent_Source_Page__c</fullName>
        <label>GTR 2 Contingent? Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>